# api/openapi/openapi.yaml
@@ -1,7 +1,8 @@
-# Copyright 2022 Innkeeper zmjaction(zhaomingjun) <748173631@qq.com>. All rights reserved.
+# Copyright 2022 Innkeeper zmjaction(zhaomingjun) &lt;748173631@qq.com>. All rights reserved.
 # Use of this source code is governed by a MIT style
 # license that can be found in the LICENSE file. The original repo for
 # this file is https://github.com/zmjaction/zblog.
+
 
 swagger: "2.0"
 servers:
@@ -9,10 +10,10 @@ servers:
     description: development server
 info:
   version: "1.0.0"
-  title: zblog api definition
+  title: miniblog api definition
   description: The API for the zblog project
   contact:
-    name: Innkeeper zmj
+    name: zmj
     email: zmj@qq.com
     url: https://github.com/colin404
   license:
@@ -26,7 +27,7 @@ paths:
       description: user login
       operationId: login
       requestBody:
-        description: login to zblog platform
+        description: login to miniblog platform
         required: true
         content:
           application/json:
@@ -415,7 +416,7 @@ components:
         password:
           type: string
           format: password
-          example: zblog1234
+          example: miniblog1234
     LoginResponse:
       type: object
       properties:
@@ -437,7 +438,7 @@ components:
         password:
           type: string
           format: password
-          example: zblog1234
+          example: miniblog1234
         nickname:
           type: string
           example: belm
@@ -457,7 +458,7 @@ components:
         password:
           type: string
           format: password
-          example: zblog1234
+          example: miniblog1234
         nickname:
           type: string
           example: belm
@@ -485,11 +486,11 @@ components:
         oldPassword:
           type: string
           format: password
-          example: zblog1234
+          example: miniblog1234
         newPassword:
           type: string
           format: password
-          example: zblog12345
+          example: miniblog12345
     UpdateUserRequest:
       type: object
       properties:
@@ -523,7 +524,7 @@ components:
         password:
           type: string
           format: password
-          example: zblog1234
+          example: miniblog1234
         nickname:
           type: string
           example: belm
@@ -550,10 +551,10 @@ components:
       properties:
         title:
           type: string
-          example: 'introduction to a good go practical project: zblog'
+          example: 'introduction to a good go practical project: miniblog'
         content:
           type: string
-          example: "Details see https://github.com/marmotedu/zblog/blob/master/README.md"
+          example: "Details see https://github.com/marmotedu/miniblog/blob/master/README.md"
     CreatePostResponse:
       type: object
       properties:
@@ -571,10 +572,10 @@ components:
           example: post-22z9jl
         title:
           type: string
-          example: 'introduction to a good go practical project: zblog'
+          example: 'introduction to a good go practical project: miniblog'
         content:
           type: string
-          example: "Details see https://github.com/marmotedu/zblog/blob/master/README.md"
+          example: "Details see https://github.com/marmotedu/miniblog/blob/master/README.md"
         createdAt:
           type: string
           format: date-time
@@ -594,10 +595,10 @@ components:
           example: post-22z9jl
         title:
           type: string
-          example: 'introduction to a good go practical project: zblog'
+          example: 'introduction to a good go practical project: miniblog'
         content:
           type: string
-          example: "Details see https://github.com/marmotedu/zblog/blob/master/README.md"
+          example: "Details see https://github.com/marmotedu/miniblog/blob/master/README.md"
         createdAt:
           type: string
           format: date-time
@@ -611,10 +612,10 @@ components:
       properties:
         title:
           type: string
-          example: 'introduction to a good go practical project: zblog'
+          example: 'introduction to a good go practical project: miniblog'
         content:
           type: string
-          example: "Details see https://github.com/marmotedu/zblog/blob/master/README.md"
+          example: "Details see https://github.com/marmotedu/miniblog/blob/master/README.md"
     ListPostResponse:
       type: object
       properties:
